--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!-- 	<link rel="stylesheet" type="text/css" href="reset.css"> -->
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 </head>
 <body>
 	<div class = "container">
