--- a/index.html
+++ b/index.html
@@ -8,16 +8,25 @@
 	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 </head>
 <body>
-	<div class = "container">
-		<div id = "animal-view"></div>
-		<div class = "row"><br></div>
-		<form id = "animal-form">
-			<label for= "animal-form">Add an Animal</label>
-			<input type="text" id="animal-input"><br>
-		  <input class = "btn btn-success" id="add-animal" type="submit" value="Submit">
+<nav class = "navbar navbar-default navbar-fixed-top">
+		<div class = "navbar-header">
+			<button type ="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded= "false" aria-controls="navbar">
+				<span class = "sr-only">Toggle NavBar</span>
+			</button>
+			<a class = "navbar-brand" href="#" id= "site-title">GifTastic</a>			
+		</div>
+		<div class ="navbar navbar-nav navbar-right">
+			<form id = "button-form">
+			<label for= "button-form">Add an Button</label>
+			<input type="text" id="button-input">
+		  <input class = "btn btn-success" id="add-button" type="submit" value="Submit">
     </form>
-   </div>
-   <div id = "gifSpot"></div>
+		</div>
+</nav>
+	<div id = "button-view"></div>
+	<div class = "row"><br></div>
+  <div id = "gifSpot"></div>
+
 </body>
 <script type="text/javascript" src = "index.js"></script>
 </html>
